--- a/Lab05_LR.ipynb
+++ b/Lab05_LR.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/YoverOlivaresUNC/AILabs-Lab05/blob/main/Lab05_LR.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -56,9 +67,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "q7kjP_aFPqb4",
-        "outputId": "dcd4065c-f9a6-44af-d143-8cad1428d09a"
+        "outputId": "b7f32081-b8ba-403f-83ed-48d9173a5a68"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -104,7 +115,7 @@
         "import pandas as pd\n",
         "\n",
         "#Accediendo al dataset existente en github\n",
-        "url = 'https://raw.githubusercontent.com/evalcas/AILabs-Lab05/refs/heads/main/diabetes.csv'\n",
+        "url = 'https://raw.githubusercontent.com/YoverOlivaresUNC/AILabs-Lab05/refs/heads/main/diabetes.csv'\n",
         "\n",
         "\n",
         "# Cargar el dataset\n",
@@ -119,9 +130,9 @@
           "height": 206
         },
         "id": "wIDSrk1mz-Nb",
-        "outputId": "19472170-b1ee-4cb6-f162-e3dcf57bb683"
+        "outputId": "f444c5c8-7516-429d-d9f3-7e6012745f3c"
       },
-      "execution_count": 4,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -143,7 +154,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-db163aef-8ecf-4697-bce8-9218c146443f\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-d01368bc-3ac6-4108-83e0-382b98bff621\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -240,7 +251,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-db163aef-8ecf-4697-bce8-9218c146443f')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d01368bc-3ac6-4108-83e0-382b98bff621')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -292,12 +303,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-db163aef-8ecf-4697-bce8-9218c146443f button.colab-df-convert');\n",
+              "        document.querySelector('#df-d01368bc-3ac6-4108-83e0-382b98bff621 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-db163aef-8ecf-4697-bce8-9218c146443f');\n",
+              "        const element = document.querySelector('#df-d01368bc-3ac6-4108-83e0-382b98bff621');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -317,8 +328,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-705138f5-3233-4c98-8286-48a5d68a009c\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-705138f5-3233-4c98-8286-48a5d68a009c')\"\n",
+              "    <div id=\"df-898458cf-a59d-4c01-9a1d-10d6b18f7aef\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-898458cf-a59d-4c01-9a1d-10d6b18f7aef')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -437,7 +448,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-705138f5-3233-4c98-8286-48a5d68a009c button');\n",
+              "            document.querySelector('#df-898458cf-a59d-4c01-9a1d-10d6b18f7aef button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -454,7 +465,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 1
         }
       ]
     },
@@ -480,7 +491,7 @@
         "id": "9wrD0FRv1U5a",
         "outputId": "2503b9cb-6edf-4862-8d24-534a4f8ddbe4"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -520,7 +531,7 @@
         "id": "PQvrTvXv1e_s",
         "outputId": "3f6a2267-86a4-4f21-a1e5-610af75aeac8"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -912,7 +923,7 @@
         "id": "U7_c67QJ1euo",
         "outputId": "0c8ff72a-dc5a-4b59-aae5-bcebbd69e87b"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1010,7 +1021,7 @@
       "metadata": {
         "id": "43LklmUsP62a"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1041,7 +1052,7 @@
         "id": "Zdgfy2xn1zr0",
         "outputId": "68449144-b43a-4103-bade-46802e1e1d1b"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1076,7 +1087,7 @@
       "metadata": {
         "id": "ovH-Qo-BPi-O"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1099,7 +1110,7 @@
       "metadata": {
         "id": "cTB6A1qEQHsd"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1141,7 +1152,7 @@
         "id": "0DEKO88ZQNxN",
         "outputId": "3fe6be1e-b8b0-4bb6-e629-036f21819946"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1190,7 +1201,7 @@
         "id": "Km7N44RhQU1m",
         "outputId": "16c9d9e7-39b1-42c6-95b3-88ac47863403"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1229,7 +1240,7 @@
         "id": "UJ7_xtH2QeE1",
         "outputId": "5d36124c-91e6-428a-e467-5eeee762f4ed"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1304,7 +1315,7 @@
         "id": "wDbSOaJ_qTqq",
         "outputId": "b0807530-ebd7-4ca9-de6d-33ca09752a22"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1405,7 +1416,7 @@
         "id": "juTPO63vrbxR",
         "outputId": "866abfa3-b4f2-46d0-beb2-623e13517301"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1531,7 +1542,7 @@
         "id": "Gsrnk5Uksi6F",
         "outputId": "14ae04f1-4c6b-4326-f1a3-c1e74da87756"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1620,7 +1631,7 @@
         "id": "zvbZDuHgusvB",
         "outputId": "99e241ac-1b71-45ee-bdba-d024e8ef39a2"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1695,7 +1706,7 @@
         "id": "UVyRoBJ_vcpu",
         "outputId": "9a5acd42-d6e3-4a31-a02f-ef3886bcfecc"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
