--- a/Lab05_LR.ipynb
+++ b/Lab05_LR.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -15,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/YoverOlivaresUNC/AILabs-Lab05/blob/main/Lab05_LR.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -489,9 +478,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9wrD0FRv1U5a",
-        "outputId": "2503b9cb-6edf-4862-8d24-534a4f8ddbe4"
+        "outputId": "7754869a-29cf-4798-834e-ea6add82e555"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -529,9 +518,9 @@
           "height": 300
         },
         "id": "PQvrTvXv1e_s",
-        "outputId": "3f6a2267-86a4-4f21-a1e5-610af75aeac8"
+        "outputId": "aaccd217-2760-4fa9-b638-a3ee0b4632c1"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -559,7 +548,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-2e2af945-1fc8-469f-ae86-43a6a4cb86a5\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-b64c37fb-6d71-4829-b980-bee2e8f11a69\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -692,7 +681,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2e2af945-1fc8-469f-ae86-43a6a4cb86a5')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b64c37fb-6d71-4829-b980-bee2e8f11a69')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -744,12 +733,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-2e2af945-1fc8-469f-ae86-43a6a4cb86a5 button.colab-df-convert');\n",
+              "        document.querySelector('#df-b64c37fb-6d71-4829-b980-bee2e8f11a69 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-2e2af945-1fc8-469f-ae86-43a6a4cb86a5');\n",
+              "        const element = document.querySelector('#df-b64c37fb-6d71-4829-b980-bee2e8f11a69');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -769,8 +758,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-f4c0aa8f-fe9e-4dee-b7c8-4585187da79f\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f4c0aa8f-fe9e-4dee-b7c8-4585187da79f')\"\n",
+              "    <div id=\"df-150d8fa1-5492-432e-af39-fd3fc7586cee\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-150d8fa1-5492-432e-af39-fd3fc7586cee')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -889,7 +878,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-f4c0aa8f-fe9e-4dee-b7c8-4585187da79f button');\n",
+              "            document.querySelector('#df-150d8fa1-5492-432e-af39-fd3fc7586cee button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -905,7 +894,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 4
         }
       ]
     },
@@ -921,9 +910,9 @@
           "height": 366
         },
         "id": "U7_c67QJ1euo",
-        "outputId": "0c8ff72a-dc5a-4b59-aae5-bcebbd69e87b"
+        "outputId": "24218e48-a2e9-4174-87f3-e3b4487c78bf"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1005,7 +994,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 5
         }
       ]
     },
@@ -1021,7 +1010,7 @@
       "metadata": {
         "id": "43LklmUsP62a"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -1050,9 +1039,9 @@
           "height": 712
         },
         "id": "Zdgfy2xn1zr0",
-        "outputId": "68449144-b43a-4103-bade-46802e1e1d1b"
+        "outputId": "479f8027-1607-400f-8aa4-a72f3c7396d0"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1087,7 +1076,7 @@
       "metadata": {
         "id": "ovH-Qo-BPi-O"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -1110,7 +1099,7 @@
       "metadata": {
         "id": "cTB6A1qEQHsd"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -1150,9 +1139,9 @@
           "height": 541
         },
         "id": "0DEKO88ZQNxN",
-        "outputId": "3fe6be1e-b8b0-4bb6-e629-036f21819946"
+        "outputId": "86f41165-e978-4348-f04d-b79b748dac11"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -1199,9 +1188,9 @@
           "height": 472
         },
         "id": "Km7N44RhQU1m",
-        "outputId": "16c9d9e7-39b1-42c6-95b3-88ac47863403"
+        "outputId": "8455a31e-56b3-4686-b933-6b1829254ae7"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1238,9 +1227,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UJ7_xtH2QeE1",
-        "outputId": "5d36124c-91e6-428a-e467-5eeee762f4ed"
+        "outputId": "39cc3869-e65b-40ee-c08b-a8dc5f4e907b"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -1313,9 +1302,9 @@
           "height": 1000
         },
         "id": "wDbSOaJ_qTqq",
-        "outputId": "b0807530-ebd7-4ca9-de6d-33ca09752a22"
+        "outputId": "15097fa6-3b09-4bce-8df2-d87b195ba546"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -1414,9 +1403,9 @@
           "height": 564
         },
         "id": "juTPO63vrbxR",
-        "outputId": "866abfa3-b4f2-46d0-beb2-623e13517301"
+        "outputId": "9bf7682f-da7d-4494-917b-3c4131eb5ece"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1540,9 +1529,9 @@
           "height": 824
         },
         "id": "Gsrnk5Uksi6F",
-        "outputId": "14ae04f1-4c6b-4326-f1a3-c1e74da87756"
+        "outputId": "d5d2ced0-a034-41ef-fe92-a932057f2ce1"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -1629,9 +1618,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zvbZDuHgusvB",
-        "outputId": "99e241ac-1b71-45ee-bdba-d024e8ef39a2"
+        "outputId": "dce60052-3525-4f52-8f07-a9f34b202e5d"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -1704,9 +1693,9 @@
           "height": 472
         },
         "id": "UVyRoBJ_vcpu",
-        "outputId": "9a5acd42-d6e3-4a31-a02f-ef3886bcfecc"
+        "outputId": "b073f338-ff52-44e9-ed2e-a368b2364e5d"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "display_data",
