--- a/Lab05_LR.ipynb
+++ b/Lab05_LR.ipynb
@@ -59,7 +59,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "q7kjP_aFPqb4",
         "outputId": "9aed2365-ebc5-4fd7-df8b-838cf99d9707"
@@ -481,7 +482,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "9wrD0FRv1U5a",
         "outputId": "a5b0ead3-0828-4847-db54-37503969cd95"
@@ -1230,7 +1232,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "UJ7_xtH2QeE1",
         "outputId": "149c826f-f011-4789-f5f3-bf6173018df2"
@@ -1305,7 +1308,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 1274
         },
         "id": "wDbSOaJ_qTqq",
         "outputId": "dc4966ac-aac9-4a41-e2f7-2eac206b72cc"
@@ -1621,7 +1624,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "zvbZDuHgusvB",
         "outputId": "7fa5ca5b-edcc-44d2-cdba-0e7ff1ca505b"
@@ -1843,7 +1847,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "R68sWhcvPiNt",
         "outputId": "1f8705f4-0af9-4580-cac8-1136b32ed2a3"
@@ -1891,7 +1896,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "tS7J6qsJP--E",
         "outputId": "87471bea-af9f-42f7-e949-dcb55b0253f9"
@@ -2552,7 +2558,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 1321
         },
         "id": "FyI9IDlvVqRD",
         "outputId": "3ae1c4ce-7612-44aa-f180-aaa7fa539b0d"
@@ -2750,7 +2756,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 1284
         },
         "id": "3HVzIFDDXwGQ",
         "outputId": "63f705d2-48fa-4880-9ffb-4c6d15736cd8"
@@ -3358,7 +3364,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "Mg-y37FSba6P",
         "outputId": "f01a5f48-9194-4ba3-d893-dd129bdbe8cb"
@@ -3502,12 +3509,12 @@
         "\n"
       ],
       "metadata": {
-        "id": "CQk8_CaSgPLg",
-        "outputId": "3719077d-57ae-42b3-fd31-d76c35414df9",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
-        }
+          "height": 1294
+        },
+        "id": "CQk8_CaSgPLg",
+        "outputId": "3719077d-57ae-42b3-fd31-d76c35414df9"
       },
       "execution_count": 78,
       "outputs": [
@@ -3644,8 +3651,7 @@
         "\n",
         "## Conclusión\n",
         "\n",
-        "El **Árbol de Decisión optimizado** representa la mejor opción para detección de diabetes, ofreciendo un balance superior entre rendimiento, interpretabilidad y aplicabilidad clínica. Su implementación con umbral 0.3 maximiza la detección temprana, objetivo fundamental en medicina preventiva.\n",
-        "\n"
+        "El **Árbol de Decisión optimizado** representa la mejor opción para detección de diabetes, ofreciendo un balance superior entre rendimiento, interpretabilidad y aplicabilidad clínica. Su implementación con umbral 0.3 maximiza la detección temprana, objetivo fundamental en medicina preventiva.\n"
       ],
       "metadata": {
         "id": "teKjNHyGgkkO"
